text overflow issue fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1958,7 +1958,7 @@ ul.wg-menu li a:hover {
 }
 
 .footer-bottom p a:hover {
-    color: #CBED44 !important;
+    color: #fff !important;
 }
 
 .footer-bottom ul {
@@ -2593,6 +2593,16 @@ ul.wg-menu li a:hover {
     letter-spacing: -1.95px;
     text-align: center;
     margin-bottom: 50px;
+}
+
+.flat-title-page .custom-heading {
+    color: #FFF;
+    font-size: 53px;
+    font-weight: 700;
+    line-height: 65px;
+    letter-spacing: -1.95px;
+    text-align: center;
+    margin-bottom: 30px;
 }
 
 .flat-title-page .heading span {
